# variational-quantum-eigensolver-hydrogen-study

./: LICENSE  Makefile  README.md  requirements.txt
Plotting/: Makefile  fix.py  make_directory.sh
Plotting/heatmap/: heatmap.gnu
Plotting/style/: default.gnu  term.gnu
Plotting/time_scan/: time_scan.gnu
Plotting/vqe_err/: vqe_err.gnu
Plotting/wave_functions/: wave_functions.gnu
classical/: CMakeLists.txt
classical/include/: classical_eigensolver.h
classical/src/: classical_eigensolver.cpp
quantum/: error_estimation.py  vqe.py
